Tweak ipl-error-display to fix messages being too narrow

--- a/src/dashboard/styles/layout.scss
+++ b/src/dashboard/styles/layout.scss
@@ -54,10 +54,6 @@
     width: 100%;
 }
 
-.mw-2 {
-    max-width: 272px;
-}
-
 .d-block {
     display: block;
 }
